# stepperBot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  script.sh  serialController.cpp  serialController.hpp  ssh-copy-id root@10.0.0.53  ssh-copy-id root@10.0.0.53.pub  t
Marlin-bugfix-2.0.x/Marlin/: Configuration.h  Configuration_adv.h
Marlin-bugfix-2.0.x/Marlin/src/pins/lpc1768/: pins_BTT_SKR_V1_4.h
